tests/errors/type_check/error_span/accumulate_switch_enum_multi.sim

        enum Option: Copy + Drop { None: unit Some: i64 }
        fn f(o: Option) {
            entry:
            switchEnum(o) [Wat: nowhere, None: end]
            end:
            return
        }
        